# closeShave

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOY.md  DOCKER.md  GAP_ANALYSIS_AND_IMPROVEMENTS.md  LINTING_SETUP.md  README.md  SETUP_DOCKERHUB.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.public.yml  docker-compose.yml  start.bat
.github/workflows/: ci.yml  docker-publish.yml
backend/: .dockerignore  .ruff.toml  Dockerfile  Dockerfile.dev  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  exceptions.py  main.py  models.py
backend/app/api/: routes.py
backend/app/scrapers/: __init__.py  amazon.py  base.py  bestbuy.py  duckduckgo.py  ebay.py  newegg.py  target.py  walmart.py
backend/app/utils/: __init__.py  database.py  geolocation.py  price_parser.py  rate_limiter.py  search_validator.py
backend/config/: scrapers.json  settings.json  version.json
backend/tests/: __init__.py  conftest.py  test_routes.py  test_scrapers.py  test_utils.py
bridge/base/: 0-closeshave-1-namespace.yaml  backend-deployment.yaml  backend-expose.yaml  backend-service.yaml  closeshave-network-network-policy.yaml  frontend-deployment.yaml  frontend-expose.yaml  frontend-service.yaml  kustomization.yaml
bridge/overlays/desktop/: backend-service.yaml  frontend-service.yaml
frontend/: .dockerignore  .eslintignore  .eslintrc.cjs  .prettierignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/public/icons/: .gitkeep
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: ErrorBoundary.css  ErrorBoundary.tsx  GlitchEffect.css  GlitchEffect.tsx  MatrixText.tsx  Modal.css  Modal.tsx  ProductCard.css  ProductCard.tsx  ResultsGrid.css  ResultsGrid.tsx  SearchBar.css  SearchBar.tsx  SearchingAnimation.css  SearchingAnimation.tsx
frontend/src/components/__tests__/: ProductCard.test.tsx  SearchBar.test.tsx
frontend/src/hooks/: useScraper.ts  useValidation.ts
frontend/src/hooks/__tests__/: useScraper.test.ts
frontend/src/styles/: cyberpunk.css  matrix.css
scripts/: docker-start.ps1  docker-start.sh  docker-stop.ps1  docker-stop.sh  install-public.sh  install.ps1  install.sh  lint.ps1  lint.sh  publish-dockerhub.sh  start.sh
