[project]
name = "closeshave-backend"
version = "0.1.0"
description = "Web scraper backend for CloseShave PWA"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "lxml>=4.9.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "bandit>=1.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PIE",    # flake8-pie
    "PL",     # Pylint
    "TRY",    # tryceratops
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments (allow for API routes)
    "PLR0912",  # Too many branches (allow for complex logic)
    "PLR0911",  # Too many return statements (allow for complex logic)
    "PLR0915",  # Too many statements (allow for complex logic)
    "TRY003",   # Avoid specifying long messages outside the exception class
    "PLR2004",  # Magic value in comparison (common in configuration)
    "ARG005",   # Unused lambda argument (common in lambdas)
    "W291",     # Trailing whitespace (formatter handles this)
    "RUF012",   # Mutable class attributes (acceptable for constants)
    "TRY300",   # Consider moving to else block (stylistic)
    "TRY301",   # Abstract raise to inner function (stylistic)
    "B904",     # Raise from err (acceptable for now)
    "PIE810",   # Call startswith once with tuple (stylistic)
    "N818",     # Exception naming (legacy code)
    "PLC0415",  # Import not at top (sometimes needed)
    "SIM108",   # Use ternary operator (stylistic)
    "PLW2901",  # Loop variable overwritten (acceptable in enrichment)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # Magic value in comparison (common in tests)
    "ARG002",   # Unused method argument (common in test mocks)
    "ARG005",   # Unused lambda argument (common in test mocks)
    "PLC0415",  # Import not at top (sometimes needed in tests)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "env"]
skips = ["B101", "B104", "B110", "B112"]  # Skip assert_used, bind_all, try-except-pass/continue

